--- a/src/main/resources/assets/reimaginedmenus/lang/es_ar.json
+++ b/src/main/resources/assets/reimaginedmenus/lang/es_ar.json
@@ -7,5 +7,9 @@
     "world.create.icon.title": "Iconos del mundo",
     "world.create.icon.folderinfo": "(Coloque los archivos de iconos aquí)",
     "world.create.icon.dropinfo": "Arrastre y suelte archivos en esta ventana para agregar íconos",
-    "world.create.icon.openfolder": "Abrir carpeta de iconos"
+    "world.create.icon.openfolder": "Abrir carpeta de iconos",
+    "world.create.icon.dropConfirm": "¿Quieres agregar los siguientes íconos a Minecraft?",
+
+    "modmenu.summaryTranslation.reimaginedmenus": "Rediseñar completamente el menú Create World.",
+    "modmenu.descriptionTranslation.reimaginedmenus": "Reimagined Menus reimagina el diseño de algunos de los menús del mundo con menús de estilo Bedrock mientras mantiene la apariencia de Java."
   }
