--- a/src/main/resources/assets/reimaginedmenus/lang/ja_jp.json
+++ b/src/main/resources/assets/reimaginedmenus/lang/ja_jp.json
@@ -8,4 +8,7 @@
   "world.create.icon.folderinfo": "(ここにアイコンのファイルを置いてください。)",
   "world.create.icon.dropinfo": "このウィンドウにファイルをドラッグ＆ドロップすると、アイコンが追加されます。",
   "world.create.icon.openfolder": "アイコンフォルダを開く"
+  "world.create.icon.dropConfirm": "マインクラフトに以下のアイコンを追加しますか？",
+  "modmenu.summaryTranslation.reimaginedmenus": "ウァルドの作るのメニューを全部で衣替えをする。",
+  "modmenu.descriptionTranslation.reimaginedmenus": "Reimagined Menusは、Java Editionのルック＆フィールを維持しつつ、一部のウァルドメニューのデザインをBedrock Edition風のメニューに再構築しています！"
 }
