--- a/src/main/resources/assets/reimaginedmenus/lang/ja_jp.json
+++ b/src/main/resources/assets/reimaginedmenus/lang/ja_jp.json
@@ -4,11 +4,11 @@
   "world.create.tab.world": "ワールド",
   "world.create.tab.advanced": "詳細",
   "world.create.icon.filetoolarge": "%s KB は大きなサイズです！ 50 KB以下のファイルを選んでください。",
-  "world.create.icon.title": "ウァルドのアイコン",
+  "world.create.icon.title": "ワールドのアイコン",
   "world.create.icon.folderinfo": "(ここにアイコンのファイルを置いてください。)",
   "world.create.icon.dropinfo": "このウィンドウにファイルをドラッグ＆ドロップすると、アイコンが追加されます。",
   "world.create.icon.openfolder": "アイコンフォルダを開く"
   "world.create.icon.dropConfirm": "マインクラフトに以下のアイコンを追加しますか？",
-  "modmenu.summaryTranslation.reimaginedmenus": "ウァルドの作るのメニューを全部で衣替えをする。",
-  "modmenu.descriptionTranslation.reimaginedmenus": "Reimagined Menusは、Java Editionのルック＆フィールを維持しつつ、一部のウァルドメニューのデザインをBedrock Edition風のメニューに再構築しています！"
+  "modmenu.summaryTranslation.reimaginedmenus": "ワールドの作るのメニューを全部で衣替えをする。",
+  "modmenu.descriptionTranslation.reimaginedmenus": "Reimagined Menusは、Java Editionのルック＆フィールを維持しつつ、一部のワールドメニューのデザインをBedrock Edition風のメニューに再構築しています！"
 }
