added Portuguese translation

--- a/src/main/resources/assets/reimaginedmenus/lang/pt_br.json
+++ b/src/main/resources/assets/reimaginedmenus/lang/pt_br.json
@@ -11,5 +11,5 @@
   "world.create.icon.dropConfirm": "Você quer adicionar os seguintes ícones para o minecraft?",
 
   "modmenu.summaryTranslation.reimaginedmenus": "Completamente Refeito o Menu de Criações de Mundo .",
-  "modmenu.descriptionTranslation.reimaginedmenus": "Reimagined Menus refaz o design de algumas partes do menu de criação de mundo com o estilo dos menus do Bedrock enquanto matem a aparencia do Java!",
+  "modmenu.descriptionTranslation.reimaginedmenus": "Reimagined Menus refaz o design de algumas partes do menu de criação de mundo com o estilo dos menus do Bedrock enquanto matem a aparencia do Java!"
 }
