--- a/src/main/resources/assets/reimaginedmenus/lang/de_de.json
+++ b/src/main/resources/assets/reimaginedmenus/lang/de_de.json
@@ -6,6 +6,10 @@
   "world.create.icon.filetoolarge": "%s KB !! Bitte wähle eine Datei unter 50 KB.",
   "world.create.icon.title": "Welticons",
   "world.create.icon.folderinfo": "(Plaziere Icon Dateien hier)",
-  "world.create.icon.dropinfo": "Ziehe die Dateien um ein Icon hinzuzufügen",
+  "world.create.icon.dropinfo": "Ziehe die Dateien hier rein um ein Icon hinzuzufügen",
   "world.create.icon.openfolder": "Öffne Iconordner"
+  "world.create.icon.dropConfirm": "Möchtest du folgende Icons in Minecraft hinzufügen?",
+
+  "modmenu.summaryTranslation.reimaginedmenus": "Komplettes redesign des Welterstellungs Menüs",
+  "modmenu.descriptionTranslation.reimaginedmenus": "Reimagined Menus überarbeitet das Design der Welterstellungs Menüs im Bedrock Style und behält dabei das Aussehen und Gefühl von Java!"
 }
