Fixed Tatar Missing Translation.

--- a/src/main/resources/assets/reimaginedmenus/lang/tt_ru.json
+++ b/src/main/resources/assets/reimaginedmenus/lang/tt_ru.json
@@ -2,7 +2,7 @@
     "world.create.settings": "Көйләүләр",
     "world.create.tab.general": "Гомуми",
     "world.create.tab.world": "Дөнья",
-    "world.create.tab.advanced": "Advanced",
+    "world.create.tab.advanced": "Киңәйтелгән",
     "world.create.icon.filetoolarge": "%s КБ — артык зур күләме!! 50 КБ-тан кимрәк файлны сайлагызчы.",
     "world.create.icon.title": "Дөнья тамгачыклары",
     "world.create.icon.folderinfo": "(Тамгачык файлларын монда салыгыз)",
